# FA25-DepartmentOfDeparted

./: .gitignore  CMakeLists.txt  CMakePresets.json  CS462 Final Submission.docx  LICENSE  README.md  alt_run.bat  alt_setup.bat  compile_and_run.bat  dev_mode_settings.json  engine.drawio.xml  log.txt  manifest.json  overview.docx  run.bat  setup.bat  setup.json  temp_movement.py  test_no_ext  vcpkg.json
ENGINE/: input.hpp  main.cpp  main.hpp
ENGINE/animation_update/: animation_runtime.cpp  animation_runtime.hpp  animation_update.cpp  animation_update.hpp  child_attachment_controller.cpp  child_attachment_controller.hpp  child_attachment_math.hpp  combat_geometry.hpp  get_best_path.cpp  get_best_path.hpp  movement_plan_executor.cpp  movement_plan_executor.hpp  path_sanitizer.cpp  path_sanitizer.hpp  stride_types.hpp
ENGINE/animation_update/custom_controllers/: Bartender_controller.cpp  Bartender_controller.hpp  Bomb_controller.cpp  Bomb_controller.hpp  Carrie_controller.cpp  Carrie_controller.hpp  Davey_controller.cpp  Davey_controller.hpp  Frog_controller.cpp  Frog_controller.hpp  Gary_controller.cpp  Gary_controller.hpp  Vibble_controller.cpp  Vibble_controller.hpp  controller_path_utils.hpp  controller_visit_threshold.hpp  default_controller.cpp  default_controller.hpp  spider_controller.cpp  spider_controller.hpp
ENGINE/asset/: Asset.cpp  Asset.hpp  animation.cpp  animation.hpp  animation_child_data.hpp  animation_cloner.cpp  animation_cloner.hpp  animation_frame.hpp  animation_frame_variant.hpp  animation_loader.cpp  animation_loader.hpp  asset_controller.cpp  asset_controller.hpp  asset_info.cpp  asset_info.hpp  asset_library.cpp  asset_library.hpp  asset_types.cpp  asset_types.hpp  asset_utils.hpp  controller_factory.cpp  controller_factory.hpp  initialize_assets.cpp  initialize_assets.hpp  surface_utils.cpp  surface_utils.hpp
ENGINE/asset_info_methods/: asset_child_loader.cpp  asset_child_loader.hpp  lighting_loader.cpp  lighting_loader.hpp
ENGINE/audio/: audio_engine.cpp  audio_engine.hpp
ENGINE/core/: AssetsManager.cpp  AssetsManager.hpp  asset_list.cpp  asset_list.hpp  asset_loader.cpp  asset_loader.hpp  asset_loader_internal.cpp  asset_loader_internal.hpp  find_current_room.cpp  find_current_room.hpp  tile_builder.cpp  tile_builder.hpp
ENGINE/dev_mode/: DockableCollapsible.cpp  DockableCollapsible.hpp  FloatingDockableManager.cpp  FloatingDockableManager.hpp  FloatingPanelLayoutManager.cpp  FloatingPanelLayoutManager.hpp  MapLightPanel.cpp  MapLightPanel.hpp  PreviewViewport.cpp  PreviewViewport.hpp  SlidingWindowContainer.cpp  SlidingWindowContainer.hpp  animation_runtime_refresh.cpp  animation_runtime_refresh.hpp  asset_filter_bar.cpp  asset_filter_bar.hpp  asset_info_sections.hpp  asset_info_ui.cpp  asset_info_ui.hpp  asset_library_ui.cpp  asset_library_ui.hpp  asset_paths.hpp  camera_ui.cpp  camera_ui.hpp  color_range_widget.cpp  color_range_widget.hpp  depth_cue_settings.hpp  dev_controls.cpp  dev_controls.hpp  dev_controls_persistence.cpp  dev_controls_persistence.hpp  dev_footer_bar.cpp  dev_footer_bar.hpp  dev_mode_color_utils.hpp  dev_mode_sdl_event_utils.hpp  dev_mode_utils.cpp  dev_mode_utils.hpp  dev_ui_settings.cpp  dev_ui_settings.hpp  dm_icons.hpp  (+58 more)
ENGINE/map_generation/: generate_rooms.cpp  generate_rooms.hpp  generate_trails.cpp  generate_trails.hpp  map_layers_geometry.cpp  map_layers_geometry.hpp  room.cpp  room.hpp  trail_geometry.cpp  trail_geometry.hpp
ENGINE/render/: asset_light.hpp  composite_asset_renderer.cpp  composite_asset_renderer.hpp  image_effect_settings.cpp  image_effect_settings.hpp  light_flicker.cpp  light_flicker.hpp  render.cpp  render.hpp  scaling_logic.hpp  warped_screen_grid.cpp  warped_screen_grid.hpp
ENGINE/render_pipeline/: ScalingProfileBuilder.cpp
ENGINE/spawn/: asset_spawn_planner.cpp  asset_spawn_planner.hpp  asset_spawner.cpp  asset_spawner.hpp  check.cpp  check.hpp  map_wide_asset_spawner.cpp  map_wide_asset_spawner.hpp  room_relative_size_resolver.cpp  room_relative_size_resolver.hpp  spacing_util.hpp  spawn_context.cpp  spawn_context.hpp  spawn_info.hpp
ENGINE/tiling/: grid_tile.hpp
ENGINE/ui/: button.cpp  button.hpp  checkbox.cpp  checkbox.hpp  dev_styles.cpp  dev_styles.hpp  font_paths.hpp  loading_screen.cpp  loading_screen.hpp  main_menu.cpp  main_menu.hpp  menu_ui.cpp  menu_ui.hpp  slider.cpp  slider.hpp  styles.cpp  styles.hpp  text_box.cpp  text_box.hpp  tinyfiledialogs.c  tinyfiledialogs.h  widget_spacing.hpp
ENGINE/utils/: area.cpp  area.hpp  area_helpers.cpp  area_helpers.hpp  cache_manager.cpp  cache_manager.hpp  dev_tasks_markdown.cpp  dev_tasks_markdown.hpp  display_color.cpp  display_color.hpp  fade_textures.cpp  fade_textures.hpp  generate_faded_mask.cpp  generate_faded_mask.hpp  grid.hpp  grid_math.cpp  grid_occupancy.cpp  grid_occupancy.hpp  input.cpp  input.hpp  light_source.hpp  light_utils.hpp  loading_status_notifier.cpp  loading_status_notifier.hpp  log.cpp  log.hpp  map_grid_settings.cpp  map_grid_settings.hpp  quick_task_popup.cpp  quick_task_popup.hpp  range_util.cpp  range_util.hpp  ranged_color.cpp  ranged_color.hpp  rebuild_assets.cpp  rebuild_assets.hpp  rebuild_queue.cpp  rebuild_queue.hpp  relative_room_position.cpp  relative_room_position.hpp  (+12 more)
ENGINE/world/: chunk.cpp  chunk.hpp  chunk_manager.cpp  chunk_manager.hpp  grid_point.hpp  world_grid.cpp  world_grid.hpp
SRC/misc_content/: scaling_tasks.md
TESTS/: test_animation_child_clone.cpp  test_animation_child_modes.cpp  test_animation_child_runtime.cpp  test_animation_child_visibility.cpp  test_animation_children_sync.cpp  test_animation_on_end.cpp  test_dev_json_store.cpp  test_manifest_loader.cpp  test_scene_renderer_prereqs.cpp  test_world_grid_same_chunk_move.cpp
TESTS/stubs/: chunk_stubs.cpp
cache/: effects_cache.json
tools/: apply_color_effects.py  asset_tool.py  basic_asset_info.py  cache_helper.py  cache_validator.py  effects.py  fog.py  light_tool.py  ok.py  rebuild_queue.py  rebuild_requests.json  retime_animation.py  set_rebuild_values.py  shadow_mask.py  shatter_helper.py
(+139 files in other folders)
